--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: ruby
 rvm:
   - 1.8.7
   - 1.9.3
+  - jruby-19mode
+jdk:
+  - openjdk7
 gemfile: server/Gemfile
 install:
   - cd server
@@ -11,6 +14,9 @@ script:
 notifications:
   email:
     - mi@mifo.sk
+    - marios@redhat.com
+    - lutter@redhat.com
+    - rlandy@redhat.com
   irc:
     channels:
       - "irc.freenode.org#deltacloud"
