--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ rvm:
   - jruby-19mode
 jdk:
   - openjdk7
+env:
+  - JRUBY_OPTS='-X+O -J-Djruby.launch.inproc=false'
 gemfile: server/Gemfile
 install:
   - cd server
