CIMI - tests adding test ordering and task:cimiplan
TrackedAt: http://tracker.deltacloud.org/patch/d3a130b9cd13d5b826e2c6cf1d3bf92c352b2c93

--- a/tests/Rakefile
+++ b/tests/Rakefile
@@ -34,4 +34,8 @@ namespace :test do
     t.test_files = FileList["cimi/*_test.rb"]
   end
 
+  Rake::TestTask.new(:cimiplan) do |t|
+    t.test_files = FileList["cimi/part*_test.rb", "cimi/cep_test.rb"]
+  end
+
 end
