* server/Rakefile: rename task test:cimi:models to test:cimi

--- a/server/Rakefile
+++ b/server/Rakefile
@@ -146,8 +146,8 @@ task :test do
   Rake::Task["mock:fixtures:reset"].invoke
   puts "\n[ \033[1;37;mrake test:ec2\33[0m ]\n"
   Rake::Task["test:ec2"].invoke
-  puts "\n[ \033[1;37;mrake test:cimi:models\33[0m ]\n"
-  Rake::Task["test:cimi:models"].invoke
+  puts "\n[ \033[1;37;mrake test:cimi\33[0m ]\n"
+  Rake::Task["test:cimi"].invoke
   DRIVERS.each do |driver|
     puts "\n[ \033[1;37;mrake drivers:#{driver}\33[0m ]\n"
     Rake::Task["test:drivers:#{driver}"].invoke
@@ -200,17 +200,15 @@ namespace :test do
     ]
   end
 
-  namespace :cimi do
-    Rake::TestTask.new(:models) do |t|
-      unless RUBY_VERSION < '1.9.0'
-        t.loader = :testrb
-      end
-      t.test_files = FileList[
-        'tests/cimi/db/*test.rb',            # CIMI frontend database tests
-        'tests/cimi/model/*spec.rb',            # CIMI frontend serialization API tests
-        'tests/cimi/collections/*test.rb',      # CIMI frontend API tests
-      ]
+  Rake::TestTask.new(:cimi) do |t|
+    unless RUBY_VERSION < '1.9.0'
+      t.loader = :testrb
     end
+    t.test_files = FileList[
+      'tests/cimi/db/*test.rb',     # CIMI frontend database tests
+      'tests/cimi/model/*spec.rb',  # CIMI frontend serialization API tests
+      'tests/cimi/collections/*test.rb',   # CIMI frontend API tests
+    ]
   end
 
 end
