TESTS: adding task to run launcher_test from the deltacloud/tests dir.
TrackedAt: http://tracker.deltacloud.org/patch/1e59e16da441bfb00f51d67379a798258264b2e8

--- a/tests/Rakefile
+++ b/tests/Rakefile
@@ -30,6 +30,10 @@ namespace :test do
     end
   end
 
+  Rake::TestTask.new(:serverblackbox) do |t|
+    t.test_files = FileList["../server/tests/deltacloud/launcher_test.rb"]
+  end
+
   Rake::TestTask.new(:cimi) do |t|
     t.test_files = FileList["cimi/*_test.rb"]
   end
