--- a/server/tests/drivers/gogrid/fixtures/test_0004_must_return_an_empty_array_for_nonexistent_image.yml
+++ b/server/tests/drivers/gogrid/fixtures/test_0004_must_return_an_empty_array_for_nonexistent_image.yml
@@ -1,37 +1,125 @@
---- 
-recorded_with: VCR 2.2.4
-http_interactions: 
-- request: 
+---
+http_interactions:
+- request:
     method: get
-    uri: https://api.gogrid.com/api/grid/image/get?api_key=b5e87458eb2d3297&format=json&id=unknown&sig=6f5408a9932ef8c8cb411bcc8af63142&v=1.9
-    body: 
-      string: ""
-    headers: 
-      Accept: 
-      - "*/*"
-  response: 
-    status: 
+    uri: https://api.gogrid.com/api/grid/image/get?api_key=04825b9fb0826b0b&format=json&id=unknown&sig=1ce68b399830f36bc0bd440df87adb4c&v=1.9
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
       code: 400
       message: Bad Request
-    headers: 
-      Content-Length: 
-      - "221"
-      Accept-Ranges: 
-      - bytes
-      Server: 
+    headers:
+      Connection:
+      - close
+      - close
+      X-Mashery-Responder:
+      - mashery-web3-lax.mashery.com
+      Server:
       - Apache-Coyote/1.1
-      Content-Type: 
+      Set-Cookie:
+      - JSESSIONID=AB4AB994E9BCB8D653EE1E1C6C5E55F4; Path=/api; Secure
+      Date:
+      - Tue, 29 Jan 2013 16:17:01 GMT
+      Accept-Ranges:
+      - bytes
+      Content-Length:
+      - '221'
+      Content-Type:
       - text/html
-      Connection: 
-      - close
-      - close
-      Date: 
-      - Sat, 25 Aug 2012 00:35:25 GMT
-      Set-Cookie: 
-      - JSESSIONID=5A49F33E830B8FBD147CF4D20C84F576; Path=/api; Secure
-      X-Mashery-Responder: 
-      - mashery-web2-lax.mashery.com
-    body: 
-      string: "{\"summary\":{\"total\":1,\"start\":0,\"returned\":1},\"status\":\"failure\",\"method\":\"/grid/image/get\",\"list\":[{\"message\":\"No object found that matches your input criteria.\",\"object\":\"error\",\"errorcode\":\"IllegalArgumentException\"}]}"
+    body:
+      encoding: US-ASCII
+      string: ! '{"summary":{"total":1,"start":0,"returned":1},"status":"failure","method":"/grid/image/get","list":[{"message":"No
+        object found that matches your input criteria.","object":"error","errorcode":"IllegalArgumentException"}]}'
     http_version: 
-  recorded_at: Sat, 25 Aug 2012 00:35:25 GMT
+  recorded_at: Tue, 29 Jan 2013 16:17:02 GMT
+- request:
+    method: get
+    uri: https://api.gogrid.com/api/common/lookup/list?api_key=04825b9fb0826b0b&format=json&lookup=server.type&sig=562b5447a6ab269fee30e9017c9b4f56&v=1.9
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Connection:
+      - close
+      X-Mashery-Responder:
+      - mashery-web3-lax.mashery.com
+      Server:
+      - Apache-Coyote/1.1
+      Set-Cookie:
+      - JSESSIONID=C3E86CDF5C2DDD38D9BFD04BABAF6DE8; Path=/api; Secure
+      Date:
+      - Tue, 29 Jan 2013 16:17:03 GMT
+      Accept-Ranges:
+      - bytes
+      Content-Length:
+      - '291'
+      Content-Type:
+      - text/html
+    body:
+      encoding: US-ASCII
+      string: ! '{"summary":{"total":2,"start":0,"numpages":0,"returned":2},"status":"success","method":"/common/lookup/list","list":[{"id":1,"description":"Web
+        or Application Server","name":"Web Server","object":"option"},{"id":2,"description":"Database
+        Server","name":"Database Server","object":"option"}]}'
+    http_version: 
+  recorded_at: Tue, 29 Jan 2013 16:17:04 GMT
+- request:
+    method: get
+    uri: https://api.gogrid.com/api/common/lookup/list?api_key=04825b9fb0826b0b&format=json&lookup=server.ram&sig=8df9540771a0baafa92acf9f2d18581f&v=1.9
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Connection:
+      - close
+      X-Mashery-Responder:
+      - mashery-web3-lax.mashery.com
+      Server:
+      - Apache-Coyote/1.1
+      Set-Cookie:
+      - JSESSIONID=AFF7B4776D298B80E1518ED31E407F0D; Path=/api; Secure
+      Date:
+      - Tue, 29 Jan 2013 16:17:05 GMT
+      Accept-Ranges:
+      - bytes
+      Content-Length:
+      - '658'
+      Content-Type:
+      - text/html
+    body:
+      encoding: US-ASCII
+      string: ! '{"summary":{"total":7,"start":0,"numpages":0,"returned":7},"status":"success","method":"/common/lookup/list","list":[{"id":1,"description":"Server
+        with 512MB RAM","name":"512MB","object":"option"},{"id":2,"description":"Server
+        with 1GB RAM","name":"1GB","object":"option"},{"id":3,"description":"Server
+        with 2GB RAM","name":"2GB","object":"option"},{"id":4,"description":"Server
+        with 4GB RAM","name":"4GB","object":"option"},{"id":5,"description":"Server
+        with 8GB RAM","name":"8GB","object":"option"},{"id":8,"description":"Server
+        with 16GB RAM","name":"16GB","object":"option"},{"id":9,"description":"Server
+        with 24GB RAM","name":"24GB","object":"option"}]}'
+    http_version: 
+  recorded_at: Tue, 29 Jan 2013 16:17:05 GMT
+recorded_with: VCR 2.4.0
