--- a/server/tests/drivers/gogrid/fixtures/test_0006_must_return_nil_when_retrieving_a_single_nonexistent_image.yml
+++ b/server/tests/drivers/gogrid/fixtures/test_0006_must_return_nil_when_retrieving_a_single_nonexistent_image.yml
@@ -1,37 +1,125 @@
---- 
-recorded_with: VCR 2.2.4
-http_interactions: 
-- request: 
+---
+http_interactions:
+- request:
     method: get
-    uri: https://api.gogrid.com/api/grid/image/get?api_key=b5e87458eb2d3297&format=json&id=unknown&sig=f6f5f58de1399256aabfaa34a201a782&v=1.9
-    body: 
-      string: ""
-    headers: 
-      Accept: 
-      - "*/*"
-  response: 
-    status: 
+    uri: https://api.gogrid.com/api/grid/image/get?api_key=04825b9fb0826b0b&format=json&id=unknown&sig=4db92fac2069e0a8b6d0c9679c883cd7&v=1.9
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
       code: 400
       message: Bad Request
-    headers: 
-      Content-Length: 
-      - "221"
-      Accept-Ranges: 
-      - bytes
-      Server: 
+    headers:
+      Connection:
+      - close
+      - close
+      X-Mashery-Responder:
+      - mashery-web2-lax.mashery.com
+      Server:
       - Apache-Coyote/1.1
-      Content-Type: 
+      Set-Cookie:
+      - JSESSIONID=E8E1CD61652CC615050EB6123A4E6B93; Path=/api; Secure
+      Date:
+      - Tue, 29 Jan 2013 16:15:52 GMT
+      Accept-Ranges:
+      - bytes
+      Content-Length:
+      - '221'
+      Content-Type:
       - text/html
-      Connection: 
-      - close
-      - close
-      Date: 
-      - Sat, 25 Aug 2012 00:35:09 GMT
-      Set-Cookie: 
-      - JSESSIONID=62FB4862E9F9407A56FAE949E6B75736; Path=/api; Secure
-      X-Mashery-Responder: 
-      - mashery-web4-lax.mashery.com
-    body: 
-      string: "{\"summary\":{\"total\":1,\"start\":0,\"returned\":1},\"status\":\"failure\",\"method\":\"/grid/image/get\",\"list\":[{\"message\":\"No object found that matches your input criteria.\",\"object\":\"error\",\"errorcode\":\"IllegalArgumentException\"}]}"
+    body:
+      encoding: US-ASCII
+      string: ! '{"summary":{"total":1,"start":0,"returned":1},"status":"failure","method":"/grid/image/get","list":[{"message":"No
+        object found that matches your input criteria.","object":"error","errorcode":"IllegalArgumentException"}]}'
     http_version: 
-  recorded_at: Sat, 25 Aug 2012 00:35:09 GMT
+  recorded_at: Tue, 29 Jan 2013 16:15:52 GMT
+- request:
+    method: get
+    uri: https://api.gogrid.com/api/common/lookup/list?api_key=04825b9fb0826b0b&format=json&lookup=server.type&sig=d91a4c3b8a602303ad4bedd8f09f2204&v=1.9
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Connection:
+      - close
+      X-Mashery-Responder:
+      - mashery-web1-lax.mashery.com
+      Server:
+      - Apache-Coyote/1.1
+      Set-Cookie:
+      - JSESSIONID=E6E05FC2711B731C77229210A25C70ED; Path=/api; Secure
+      Date:
+      - Tue, 29 Jan 2013 16:15:53 GMT
+      Accept-Ranges:
+      - bytes
+      Content-Length:
+      - '291'
+      Content-Type:
+      - text/html
+    body:
+      encoding: US-ASCII
+      string: ! '{"summary":{"total":2,"start":0,"numpages":0,"returned":2},"status":"success","method":"/common/lookup/list","list":[{"id":1,"description":"Web
+        or Application Server","name":"Web Server","object":"option"},{"id":2,"description":"Database
+        Server","name":"Database Server","object":"option"}]}'
+    http_version: 
+  recorded_at: Tue, 29 Jan 2013 16:15:53 GMT
+- request:
+    method: get
+    uri: https://api.gogrid.com/api/common/lookup/list?api_key=04825b9fb0826b0b&format=json&lookup=server.ram&sig=c7a06e2097ead90c9f1f1353ac43fd4e&v=1.9
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Connection:
+      - close
+      X-Mashery-Responder:
+      - mashery-web3-lax.mashery.com
+      Server:
+      - Apache-Coyote/1.1
+      Set-Cookie:
+      - JSESSIONID=DD447C8BBD65221D55B24CAF3DF669A7; Path=/api; Secure
+      Date:
+      - Tue, 29 Jan 2013 16:15:55 GMT
+      Accept-Ranges:
+      - bytes
+      Content-Length:
+      - '658'
+      Content-Type:
+      - text/html
+    body:
+      encoding: US-ASCII
+      string: ! '{"summary":{"total":7,"start":0,"numpages":0,"returned":7},"status":"success","method":"/common/lookup/list","list":[{"id":1,"description":"Server
+        with 512MB RAM","name":"512MB","object":"option"},{"id":2,"description":"Server
+        with 1GB RAM","name":"1GB","object":"option"},{"id":3,"description":"Server
+        with 2GB RAM","name":"2GB","object":"option"},{"id":4,"description":"Server
+        with 4GB RAM","name":"4GB","object":"option"},{"id":5,"description":"Server
+        with 8GB RAM","name":"8GB","object":"option"},{"id":8,"description":"Server
+        with 16GB RAM","name":"16GB","object":"option"},{"id":9,"description":"Server
+        with 24GB RAM","name":"24GB","object":"option"}]}'
+    http_version: 
+  recorded_at: Tue, 29 Jan 2013 16:15:55 GMT
+recorded_with: VCR 2.4.0
